<resources>
    <string name="app_name">CheckinMobile</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name_label">Nome</string>
    <string name="name_text">Fulano da Silva</string>
    <string name="email_label">Email</string>
    <string name="email_text">fuladodasilva@email.com</string>

    <string name="check">Check</string>
    <string name="list_complete">Lista completa</string>


    <string name="scan">Escanear</string>
    <string name="searchBtn"> Pesquisar </string>
    <string name="tooltip">Pesquise pelo nome ou email no campo abaixo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="successText">Convidado registrado</string>
    <string name="failureText">Ops, não encontramos o convidado.</string>
    <string name="loadingText">Aguarde...</string>

</resources>
