<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.app.felipe.checkinmobile.MainActivity">

<!-- Name layout -->
<TextView
    android:id="@+id/name_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:text="@string/name_label"
    />

<EditText
    android:id="@+id/name_content"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="text"
    android:layout_below="@+id/name_label"
    android:layout_alignEnd="@+id/scan_button" />

<!-- Email layout -->
<TextView
    android:id="@+id/email_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/email_label"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/name_content"
    android:layout_alignParentStart="true" />

<EditText
    android:id="@+id/email_content"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:layout_below="@+id/email_label"
    android:layout_centerHorizontal="true" />

<!-- Button layout -->
<Button
    android:id="@+id/check_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/check"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true" />

<Button
    android:id="@+id/list_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/list_complete"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true" />

<Button
    android:id="@+id/scan_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/scan"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true" />

<!-- Feedback layout -->
<TextView
    android:id="@+id/scan_format"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textIsSelectable="true"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/email_content" />

<TextView
    android:id="@+id/scan_content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textIsSelectable="true"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/scan_format" />



</RelativeLayout>
